TEST_PROGRAMS/INVALID/shabbir_hussain/prog8.min
var s : string;

s = "haha#11";

